# gemchat-rs

./: .gitignore  Cargo.toml  DOCKER_HUB_INSTRUCTIONS.md  Dockerfile  README.md  docker-compose.yml  widget-test.html
src/: gemini.rs  main.rs  models.rs
static/: widget.js
